# oskr

./: .buildinfo  .clang-format  .clang-tidy  .gitignore  .gitmodules  00-generate-document.html  01-write-protocol.html  02-setup-benchmark.html  03-optimize-for-dropping.html  CMakeLists.txt  Cargo.toml  Doxyfile  README.md  article.html  build.rs  conf.py  genindex.html  index.html  index.rst  objects.inv  override.css  prototype.cxx  search.html  searchindex.js
_sources/: 01-write-protocol.rst.txt  02-setup-benchmark.rst.txt  index.rst.txt
_static/: overwrite.css  pygments.css
app/: Mock.hpp  Null.hpp
article/: 00-generate-document.html  00-generate-document.md  01-write-protocol.html  02-setup-benchmark.html  02-setup-benchmark.md  03-optimize-for-dropping.html  group.h  index.h  index.html
benchmark/: CMakeLists.txt  Client.cpp
common/: BasicClient.hpp  BasicClient.html  CMakeLists.txt  ChainLog.hpp  ClientTable.hpp  ClientTable.html  ListLog.hpp  Quorum.hpp  StatefulTimeout.hpp  StatefulTimeout.html  index.html
core/: Bitsery.hpp  CMakeLists.txt  Client.hpp  Client.html  Config.hpp  Foundation.hpp  Log.hpp  Log.html  Transport.hpp  Transport.html  TransportReceiver.hpp  TransportReceiver.html  Type.hpp  Type.html  Utility.hpp  index.html  transport-receiver.html  transport.html
dependency/: folly-has_coroutine_check.patch
doc/: 01-write-protocol.md  03-optimize-for-dropping.md  conf.py  index.rst
docs/: BasicClient_8hpp_source.html  Bitsery_8hpp_source.html  ChainLog_8hpp_source.html  ClientTable_8hpp_source.html  Client_8hpp_source.html  Config_8hpp_source.html  DPDKClient_8hpp_source.html  Foundation_8hpp_source.html  ListLog_8hpp_source.html  Log_8hpp_source.html  Mock_8hpp_source.html  Null_8hpp_source.html  Quorum_8hpp_source.html  Simulated_8hpp_source.html  StatefulTimeout_8hpp_source.html  TransportReceiver_8hpp_source.html  Transport_8hpp_source.html  Type_8hpp.html  Type_8hpp.js  Type_8hpp__dep__incl.map  Type_8hpp__dep__incl.md5  Type_8hpp__incl.map  Type_8hpp__incl.md5  Type_8hpp_source.html  Utility_8hpp_source.html  annotated.html  annotated_dup.js  article.html  article.js  classes.html  classoscar_1_1App-members.html  classoscar_1_1App.html  classoscar_1_1App.js  classoscar_1_1App__inherit__graph.map  classoscar_1_1App__inherit__graph.md5  classoscar_1_1BasicClient-members.html  classoscar_1_1BasicClient.html  classoscar_1_1BasicClient.js  classoscar_1_1BasicClient_3_01void_00_01void_01_4.html  classoscar_1_1BasicClient__coll__graph.map  (+290 more)
html/: ChainLog_8hpp_source.html  ClientTable_8hpp_source.html  Client_8hpp_source.html  Config_8hpp_source.html  Foundation_8hpp_source.html  Log_8hpp_source.html  Null_8hpp_source.html  StatefulTimeout_8hpp_source.html  TransportReceiver_8hpp_source.html  Transport_8hpp_source.html  classoscar_1_1App-members.html  classoscar_1_1App.html  classoscar_1_1App__inherit__graph.map  classoscar_1_1BasicClient-members.html  classoscar_1_1BasicClient.html  classoscar_1_1BasicClient.js  classoscar_1_1BasicClient__coll__graph.map  classoscar_1_1BasicClient__inherit__graph.md5  classoscar_1_1ChainLog.html  classoscar_1_1ChainLog__coll__graph.map  classoscar_1_1ChainLog__coll__graph.md5  classoscar_1_1Client.html  classoscar_1_1Client.js  classoscar_1_1ClientTable-members.html  classoscar_1_1Client__coll__graph.md5  classoscar_1_1Client__inherit__graph.map  classoscar_1_1Client__inherit__graph.md5  classoscar_1_1ListLog-members.html  classoscar_1_1ListLog.html  classoscar_1_1ListLog__coll__graph.map  classoscar_1_1Log.html  classoscar_1_1MockApp-members.html  classoscar_1_1MockApp.html  classoscar_1_1MockApp.js  classoscar_1_1MockApp__coll__graph.map  classoscar_1_1MockApp__inherit__graph.md5  classoscar_1_1NullApp-members.html  classoscar_1_1NullApp.html  classoscar_1_1NullApp.js  classoscar_1_1SimulatedTransport-members.html  (+55 more)
latex/: Type_8hpp.tex  Type_8hpp__dep__incl.md5  Type_8hpp__incl.md5  annotated.tex  article.tex  classoscar_1_1App.tex  classoscar_1_1App__inherit__graph.md5  classoscar_1_1BasicClient.tex  classoscar_1_1BasicClient_3_01void_00_01void_01_4.tex  classoscar_1_1BasicClient__coll__graph.md5  classoscar_1_1BasicClient__inherit__graph.md5  classoscar_1_1ChainLog.tex  classoscar_1_1ChainLog__coll__graph.md5  classoscar_1_1Client.tex  classoscar_1_1ClientTable.tex  classoscar_1_1Client__coll__graph.md5  classoscar_1_1Client__inherit__graph.md5  classoscar_1_1ListLog.tex  classoscar_1_1ListLog__coll__graph.md5  classoscar_1_1Log.tex  classoscar_1_1Log__coll__graph.md5  classoscar_1_1MockApp.tex  classoscar_1_1MockApp__coll__graph.md5  classoscar_1_1NullApp.tex  classoscar_1_1NullApp__coll__graph.md5  classoscar_1_1NullApp__inherit__graph.md5  classoscar_1_1Quorum.tex  classoscar_1_1SimulatedTransport.tex  classoscar_1_1SimulatedTransport__inherit__graph.md5  classoscar_1_1StatefulTimeout.tex  classoscar_1_1Transport.tex  classoscar_1_1TransportMulticastReceiver.tex  classoscar_1_1TransportMulticastReceiver__coll__graph.md5  classoscar_1_1TransportMulticastReceiver__inherit__graph.md5  classoscar_1_1TransportReceiver.tex  classoscar_1_1TransportReceiver__inherit__graph.md5  classoscar_1_1Transport__coll__graph.md5  classoskr_1_1App.tex  classoskr_1_1App__inherit__graph.md5  classoskr_1_1BasicClient.tex  (+62 more)
src/: async_ecosystem.rs  common.rs  director.rs  dpdk.rs  dpdk_shim.c  dpdk_shim.rs  executor.rs  facade.rs  latency.rs  lib.rs  model.rs  simulated.rs  stage.rs  transport.rs
test/: BasicClient.cpp  CMakeLists.txt  CoreFoundation.cpp  Misc.cpp  Simulated.cpp  SimulatedTransport.cpp  Unreplicated.cpp  VR.cpp
transport/: DPDKClient.hpp  Simulated.hpp
xml/: 00-generate-document_8md.xml  01-write-protocol_8md.xml  02-setup-benchmark_8md.xml  03-optimize-for-dropping_8md.xml  BasicClient_8hpp.xml  Bitsery_8hpp.xml  ChainLog_8hpp.xml  ClientTable_8hpp.xml  Client_8hpp.xml  Config_8hpp.xml  DPDKClient_8hpp.xml  Foundation_8hpp.xml  ListLog_8hpp.xml  Log_8hpp.xml  Mock_8hpp.xml  Null_8hpp.xml  Quorum_8hpp.xml  README_8md.xml  Simulated_8hpp.xml  StatefulTimeout_8hpp.xml  TransportReceiver_8hpp.xml  (+52 more)
(+133 files in other folders)
