[package]
name = "oskr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
bincode = "1.3.3"
rand = "0.8.4"
serde = "1.0.135"
serde_derive = "1.0.135"
tokio = { version = "1.15.0", features = ["full", "test-util"] }

[build-dependencies]
cc = "1.0.72"

[features]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
