[package]
name = "oskr"
description = "High performance distributed protocol collection"
version = "0.1.0-alpha.1"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
bincode = "1.3.3"
futures = "0.3.21"
hdrhistogram = "7.5.0"
k256 = "0.10.2"
quanta = "0.9.3"
rand = "0.8.4"
serde = "1.0.135"
serde_derive = "1.0.135"
sha2 = "0.10.2"
tracing = "0.1.31"
tracing-subscriber = "0.3.9"

[dev-dependencies]
lazy_static = "1.4.0"
tokio = { version = "1.15.0", features = ["full", "test-util"] }

[build-dependencies]
cc = "1.0.72"

[features]
